Optimize analytics with pre-computed aggregates, fix page whitespace, add timeline year grouping

--- a/web/index.html
+++ b/web/index.html
@@ -145,16 +145,7 @@
             </div>
         </section>
 
-        <div class="privacy-notice">
-            <svg class="lock-icon" viewBox="0 0 24 24" aria-hidden="true">
-                <rect x="3" y="11" width="18" height="11" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
-                <path d="M7 11V7a5 5 0 0 1 10 0v4" fill="none" stroke="currentColor" stroke-width="2"/>
-            </svg>
-            <div class="privacy-text">
-                <p><strong>Your files stay in your browser.</strong></p>
-                <p>Nothing is uploaded anywhere.</p>
-            </div>
-        </div>
+        <p class="privacy-footnote">Your files stay in your browser. Nothing is uploaded anywhere.</p>
     </main>
 
     <div class="progress-overlay" id="progressOverlay" hidden>
