Fix timezone conversion, re-enable topic filtering, fix chart alignment and initial render
- Convert UTC dates to local timezone in analytics and Excel export
- Re-enable topic click filtering on analytics page with filter chip removal
- Remove chart card rotation for cleaner appearance
- Fix timeline not rendering on initial page load
- Make clean and insights pages use wide layout like analytics

--- a/web/clean.html
+++ b/web/clean.html
@@ -38,7 +38,7 @@
         </svg>
     </button>
 
-    <main class="screen-inner">
+    <main class="screen-inner screen-inner--wide">
         <header class="screen-header">
             <div class="header-text">
                 <h1 class="title">Clean Data</h1>
