--- a/web/insights.html
+++ b/web/insights.html
@@ -37,7 +37,7 @@
         </svg>
     </button>
 
-    <main class="screen-inner">
+    <main class="screen-inner screen-inner--wide">
         <header class="screen-header">
             <div class="header-text">
                 <h1 class="title">Insights</h1>
