Harden production readiness with CI, runtime guards, and local-time analytics

--- a/web/analytics.html
+++ b/web/analytics.html
@@ -88,7 +88,7 @@
                 <div class="chart-canvas-wrap">
                     <canvas id="timelineChart"></canvas>
                 </div>
-                <p class="chart-note">Click a month to focus on that period.</p>
+                <p class="chart-note">Click a point to focus that month.</p>
             </div>
 
             <div class="chart-card" id="topicsCard">
@@ -144,6 +144,7 @@
 
     <canvas id="roughCanvas" aria-hidden="true"></canvas>
 
+    <script src="js/runtime.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/decorations.js"></script>
     <script src="js/storage.js"></script>
