--- a/web/clean.html
+++ b/web/clean.html
@@ -130,6 +130,7 @@
 
     <canvas id="roughCanvas" aria-hidden="true"></canvas>
 
+    <script src="js/runtime.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/decorations.js"></script>
     <script src="js/storage.js"></script>
