Add MIT license, docs, and improve README presentation

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
                 </span>
                 LinkedIn Analyzer
             </h1>
-            <p class="subtitle">Your data, your browser, your privacy</p>
+            <p class="subtitle">Clean and analyze your LinkedIn data exports</p>
         </header>
 
         <nav class="top-nav">
